2008-09-30  Alper KANAT  <alperkanat@gmail.com>

	* polls/templatetags/poll_filters.py: fixed a bug..
	* blog/feeds.py: fixed a bug.. actually this is a stupid implementation..
	* blog/templatetags/blog_filters.py: fixed a typo..
	* tagged: Version 1.0

2008-09-29  Alper KANAT  <alperkanat@gmail.com>

	* migrated to bazaar instead of subversion.. therefore updated some
	corrupted symlinks and some permissions..
	* .htaccess: deleted this file since i'm moving to nginx..

2008-09-24  Alper KANAT  <alperkanat@gmail.com>

	* extra/captcha.py, users/views.py: controlling captcha for non ASCII
	characters.. must use forms api in the future..
	* comments/views.py: anonymous users don't have to enter a web site..
	* templates/feeds/latest_description.html: left the truncate job to
	feedburner.. this way raptiye don't care about how long the blog post is and
	pushes the whole entry to the rss..
	* extra/webcal.py, blog/templatetags/blog_filters.py: can exclude anything
	from the object being rendered into the web calendar..
	* extra/messages.py: added new messages..
	* extra/captcha.py: there's a bug in the registration form that comes up
	when unicode characters are entered into the captcha.. this might fix it..
	* comments/views.py, comments/forms.py, templates/blog/comments.html:
	anonymous comments can be entered now.. this needs more testing btw.. using
	forms api to validate the comments form (but only when anonymous comments
	are allowed which might change in the future.. has put a FIXME there..) i
	really hate long views.. it seems kinda wrong..
	* templates/blog/latest_comments.html: anonymous users' names and web sites
	are shown in the latest comments now.. using spaceless template tag in here
	because otherwise it'd be too hard to read the code..
	* .htaccess: http://svn.raptiye.org is now redirected to
	http://raptiye.org.. maybe i should really stop being so paranoid and let
	the http protocol free for svn..
	
2008-09-19  Alper KANAT  <alperkanat@gmail.com>
