@@ -2,6 +2,7 @@ from django.contrib import admin
 from raptiye.tags.models import Tag
 
 class TagAdmin(admin.ModelAdmin):
-	pass
+	list_display = ("name", "slug")
+	prepopulated_fields = {"slug": ("name",)}
 
 admin.site.register(Tag, TagAdmin)
