@@ -4,6 +4,7 @@ from django.db import models
 
 class Tag(models.Model):
 	name = models.CharField(u"Tag Name", max_length=30, unique=True)
+	slug = models.SlugField(u"URL", max_length=50)
 
 	def __unicode__(self):
 		return self.name
